objects/CameleonCPQ__QxSetup__c.object
<CustomObject>
    <description>PROS Smart CPQx Settings per PROS Quote record type</description>
    <fields>
        <fullName>CameleonCPQ__LinesManagementPolicy__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>0 = [No Synchronization],  1 = [Create/Update/Delete]</inlineHelpText>
        <label>Lines Management Policy</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__MappingINCustomApexClass__c</fullName>
        <description>The name of the Apex Class that will be invoked to provide custom context to CPQx.</description>
        <label>Mapping IN Custom Apex Class</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__MappingSetName__c</fullName>
        <label>Mapping Set Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__PropagateQuoteCurrency__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When the currency code of a PROS Quote is modified, this parameter indicates whether to propagate the new value of the currency to CPQx</inlineHelpText>
        <label>Propagate Quote Currency to CPQx</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__PropagateQuoteStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When the status of a PROS Quote is modified, this parameter indicates whether to propagate the new value of the status to CPQx</inlineHelpText>
        <label>Propagate Quote Status to CPQx</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__QuoteAddressesInheritance__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When checked, the PROS Quote inherits from Account addresses (if any selected for the quote), or from Contact addresses (if a contact is selected)</inlineHelpText>
        <label>Account / Contact Addresses inheritance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__QuoteModelName__c</fullName>
        <label>Quote Model Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__RefreshActionName__c</fullName>
        <inlineHelpText>The name of the Refresh and Synchronize actions of the Quote Model. Format : refreshActionName,syncActionName</inlineHelpText>
        <label>Refresh/Synchronize Actions</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__SyncUIMode__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>[checked] :A waiting screen is displayed if the synchronization is in progress [unchecked] :No waiting screen is displayed</inlineHelpText>
        <label>Synchronous Redirection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CameleonCPQ__Theme__c</fullName>
        <description>The CPQx theme</description>
        <label>Theme</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PROSAgreement__AgreementConfigName__c</fullName>
        <label>Agreement Config Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>PROS Setup</label>
    <listViews>
        <fullName>CameleonCPQ__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PROS Quote Record Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PROS Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>